syntax = "proto3";

import "google/protobuf/empty.proto";
import "sys_core_models.proto";

package v2.sys_core.services;

option go_package = "github.com/getcouragenow/sys-share/sys-core/service/go/rpc/v2";

service DbAdminService {
  rpc Backup(google.protobuf.Empty) returns (v2.sys_core.services.BackupResult) {}
  rpc ListBackup(google.protobuf.Empty) returns (v2.sys_core.services.ListBackupResult) {}
  rpc Restore(v2.sys_core.services.RestoreRequest) returns (v2.sys_core.services.RestoreResult){}
}

service BusService {
  rpc Broadcast(v2.sys_core.services.EventRequest) returns (v2.sys_core.services.EventResponse) {}
}